[workspace]
resolver = "2"
members = [
	# TODO: it might be nice to split this.
	"crates/*"
]

[workspace.dependencies]
anyhow = "1.0.86"

clap = { version = "4.5.6", features = ["cargo"] }

tokio = { version = "1.37.0", features = [ "full" ] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.61"
