[package]
name = "letsplay_runner_core"
version = "0.1.0"
edition = "2021"
# For now. Once this is done we might actually want to
# release this as public so other people can write runners
# without having them need to be in the Let's Play codebase.
publish = false

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
