[package]
name = "letsplay_runner_retro"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
letsplay_runner_core = { path = "../letsplay_runner_core" }
tokio = {workspace = true}

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow = { workspace = true }
