[package]
name = "retro_frontend"
version = "0.1.0"
edition = "2021"
# Could be useful, and does build seperately, so...
# publish = false

[dependencies]
libc = "0.2.155"
libloading = "0.8.3"
libretro-sys = "0.1.1"
rgb565 = "0.1.3"
serde = { version = "1.0.204", features = ["derive"] }
thiserror = { workspace = true }
toml = "0.8.19"

tracing = "0.1.40"

[build-dependencies]
cc = "1.0.99"
