[package]
name = "retrodemo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.5.6", features = ["cargo"] }
minifb = "0.27.0"
letsplay_egl = { path = "../letsplay_egl" }
retro_frontend = { path = "../retro_frontend" }

tracing = "0.1.40"
tracing-subscriber = "0.3.18"
gl = "0.14.0"
anyhow = "1.0.86"
