[package]
name = "retrodemo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { workspace = true }
minifb = "0.27.0"
letsplay_gpu = { path = "../letsplay_gpu" }
retro_frontend = { path = "../retro_frontend" }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
gl = "0.14.0"
anyhow = { workspace = true }
